--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kartu Profil Suou Yuki</title>
+  <title>Kartu Profil Akane Kurokawa</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -11,12 +11,12 @@
 </head>
 <body>
   
-  <div class="card" id="yukiCard">
-    <img src="yuki.png" class="card-img-top" id="yukiImage" alt="Gambar Suou Yuki">
+  <div class="card" id="akaneCard">
+    <img src="akane.png" class="card-img-top" id="akaneImage" alt="Gambar Akane Kurokawa">
     <div class="card-body">
-      <p class="quote">"Kadang keheningan adalah bahasa yang paling jujur."</p>
-      <h5 class="card-title">Suou Yuki</h5>
-      <ul class="nav nav-tabs" id="yukiTabs" role="tablist">
+      <p class="quote">"Tidak ada peran yang tidak bisa aku perankan."</p>
+      <h5 class="card-title">Akane Kurokawa</h5>
+      <ul class="nav nav-tabs" id="akaneTabs" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true">Profil</button>
         </li>
@@ -27,18 +27,18 @@
           <button class="nav-link" id="facts-tab" data-bs-toggle="tab" data-bs-target="#facts" type="button" role="tab" aria-controls="facts" aria-selected="false">Fakta Menarik</button>
         </li>
       </ul>
-      <div class="tab-content" id="yukiTabContent">
+      <div class="tab-content" id="akaneTabContent">
         <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <p>Suou Yuki adalah sosok yang misterius dan pendiam(Mungkin). Meskipun begitu, di balik sikap dinginnya, tersimpan rasa empati yang dalam(Mungkin).</p>
+          <p>Akane Kurokawa adalah seorang aktris muda berbakat yang dikenal dengan kemampuannya mendalami setiap karakter yang ia perankan. Meskipun pendiam, Akane memiliki kecerdasan emosional yang tinggi dan mampu menunjukkan sisi terdalam dari setiap karakter yang ia mainkan.</p>
         </div>
         <div class="tab-pane fade" id="career" role="tabpanel" aria-labelledby="career-tab">
-          <p>Yuki selalu menjadi pusat perhatian dengan kemampuannya yang luar biasa dalam berbagai hal. Dia sering dipandang sebagai sosok yang sulit didekati, namun memiliki kesetiaan yang tak tertandingi terhadap teman-temannya.</p>
+          <p>Karier Akane dimulai sejak usia muda. Dia berhasil menarik perhatian publik dengan aktingnya yang memukau di berbagai produksi. Kemampuannya beradaptasi dengan cepat dalam berbagai situasi membuatnya menjadi salah satu aktris muda paling menjanjikan di industri hiburan.</p>
         </div>
         <div class="tab-pane fade" id="facts" role="tabpanel" aria-labelledby="facts-tab">
           <ul>
-            <li>Warna favoritnya adalah biru muda.</li>
-            <li>Yuki menyukai suasana sunyi dan tenang.</li>
-            <li>Dia sering membaca buku dalam waktu senggangnya.</li>
+            <li>Warna favoritnya adalah Biru (Mungkin).</li>
+            <li>Akane adalah perfeksionis yang selalu berusaha menampilkan yang terbaik dalam setiap peran.</li>
+            <li>Dia sangat peduli pada teman-temannya dan sering kali menempatkan perasaan mereka di atas dirinya sendiri.</li>
           </ul>
         </div>
       </div>
