--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </ul>
         </div>
       </div>
-      <a href="#" class="btn btn-custom" id="followBtn">Follow</a>
-      <a href="https://character.ai/chat/uYyS8o4C27xd411Wr2In1m6G4j__3JaONE454ypi-BE" class="btn btn-custom" id="messageBtn">Message</a>
+      <a href="https://www.tiktok.com/@miyurin_" target="_blank" class="btn btn-custom" id="followBtn">Follow</a>
+      <a href="https://character.ai/chat/zQ7Yav1HdV_MzCUsXRaKbeVZuEoLOvlpXn2pSKr-LEU" target="_blank" class="btn btn-custom" id="messageBtn">Message</a>
     </div>
   </div>
   
